tests/baselines/reference/typeParameterDiamond2.errors.txt
tests/cases/compiler/typeParameterDiamond2.ts(8,13): error TS2322: Type 'T | U' is not assignable to type 'Top'.
  'T | U' could be instantiated with an arbitrary type which could be unrelated to 'Top'.
    Type 'U' is not assignable to type 'Top'.
      'U' could be instantiated with an arbitrary type which could be unrelated to 'Top'.
tests/cases/compiler/typeParameterDiamond2.ts(10,13): error TS2322: Type 'Bottom' is not assignable to type 'Top'.
  'Bottom' could be instantiated with an arbitrary type which could be unrelated to 'Top'.
    Type 'T | U' is not assignable to type 'Top'.
      'T | U' could be instantiated with an arbitrary type which could be unrelated to 'Top'.
        Type 'U' is not assignable to type 'Top'.
          'U' could be instantiated with an arbitrary type which could be unrelated to 'Top'.


==== tests/cases/compiler/typeParameterDiamond2.ts (2 errors) ====
    function diamondTop<Top>() {
        function diamondMiddle<T extends Top, U>() {
            function diamondBottom<Bottom extends T | U>() {
                var top: Top;
                var middle: T | U;
                var bottom: Bottom;
    
                top = middle;
                ~~~
!!! error TS2322: Type 'T | U' is not assignable to type 'Top'.
!!! error TS2322:   'T | U' could be instantiated with an arbitrary type which could be unrelated to 'Top'.
!!! error TS2322:     Type 'U' is not assignable to type 'Top'.
!!! error TS2322:       'U' could be instantiated with an arbitrary type which could be unrelated to 'Top'.
                middle = bottom;
                top = bottom;
                ~~~
!!! error TS2322: Type 'Bottom' is not assignable to type 'Top'.
!!! error TS2322:   'Bottom' could be instantiated with an arbitrary type which could be unrelated to 'Top'.
!!! error TS2322:     Type 'T | U' is not assignable to type 'Top'.
!!! error TS2322:       'T | U' could be instantiated with an arbitrary type which could be unrelated to 'Top'.
!!! error TS2322:         Type 'U' is not assignable to type 'Top'.
!!! error TS2322:           'U' could be instantiated with an arbitrary type which could be unrelated to 'Top'.
            }
        }
    }